# flake8-pydantic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  tests.yml
requirements/: requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.txt
src/flake8_pydantic/: _compat.py  _utils.py  errors.py  plugin.py  visitor.py
tests/: test_is_dataclass.py  test_is_pydantic_model.py
tests/rules/: test_pyd001.py  test_pyd002.py  test_pyd003.py  test_pyd004.py  test_pyd005.py  test_pyd006.py  test_pyd010.py
